--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,13 +11,14 @@ notifications:
   on_build_success: true
   on_build_failure: true
   on_build_status_changed: false
+artifacts:
+- path: deploy\*.zip
+  name: mypackage  
 deploy:
   provider: WebDeploy
   server: https://smartbot-tmp.scm.azurewebsites.net:443/msdeploy.axd?site=smartbot-tmp
   website: smartbot-tmp
   username: $smartbot-tmp
-  password: 
-      secure: f1odxw3DmplLvw9xsqBczDgMXyMZuukHQaDRoubsG4wgopyvmQGbnz5xCihq
+  password: f1odxw3DmplLvw9xsqBczDgMXyMZuukHQaDRoubsG4wgopyvmQGbnz5xCihq
   ntlm: false
-  remove_files: true
-  app_offline: true
+  artifact: mypackage
