--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ notifications:
   on_build_failure: true
   on_build_status_changed: false
 artifacts:
-- path: *.zip
+- path: *
   name: mypackage  
 deploy:
   provider: WebDeploy
