--- a/SmartBot.Web/bin/Bot Application1.dll.config
+++ b/SmartBot.Web/bin/Bot Application1.dll.config
@@ -6,9 +6,14 @@
 <configuration>
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
+    <add key="BotId" value="" />
+    <add key="MicrosoftAppId" value="" />
+    <add key="MicrosoftAppPassword" value="" />
+    <!--
     <add key="BotId" value="smartbot-tmp" />
     <add key="MicrosoftAppId" value="c56a73bd-ccb2-4c20-a273-416cb70da7d8" />
     <add key="MicrosoftAppPassword" value="JqL59aKWG9fbbTZxJNT5eky" />
+      -->
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
